[package]
name = "rust-llama-api"
version = "1.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
curl = "0.4.44"
serde = {version = "1.0.194", features = ["derive"] }
serde_json =  "1.0.111"
